# ms-scorecard

./: Dockerfile  README.md  index.yaml  main.py  openapi.json  pyproject.toml
.github/workflows/: build-push-chart.yml  codeql.yml  scorecard.yml
cloudbuild/: cloudbuild.yaml
reports/: frequency.html  lag.html
