[tool.poetry]
name = "ms-scorecard"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.120.2"
numpy = "2.3.4"
pandas = "2.3.3"
psycopg2-binary = "2.9.11"
pydantic = "2.12.3"
sqlalchemy = "2.0.44"
uvicorn = "0.38.0"
certifi = "2025.10.5"
starlette = "0.49.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
