[tool.poetry]
name = "ms-scorecard"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.123.9"
numpy = "2.3.5"
pandas = "2.3.3"
psycopg2-binary = "2.9.11"
pydantic = "2.12.5"
sqlalchemy = "2.0.44"
uvicorn = "0.38.0"
certifi = "2025.11.12"
starlette = "0.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
