[tool.poetry]
name = "ms-scorecard"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2026.0.0"
fastapi = "^0.128.0"
numpy = "^2.4.0"
pandas = "^2.3.3"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.45"
starlette = "^0.50.0"
uvicorn = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
